--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -11,6 +11,7 @@
     "particles-bg": "^2.5.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "^3.4.4",
     "react-simple-image-viewer": "^0.0.8",
     "smooth-scroll": "^16.1.3"
