--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^5.3.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^5.0.1",
     "react-simple-image-viewer": "^0.0.8",
     "smooth-scroll": "^16.1.3"
   },
@@ -36,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.10"
   }
 }
