--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -3,17 +3,23 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chokidar": "^3.5.1",
     "emailjs-com": "^2.6.4",
+    "framer-motion": "^11.3.29",
     "particles-bg": "^2.5.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "primereact": "^10.8.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^5.0.1",
     "react-simple-captcha": "^9.3.1",
     "react-simple-image-viewer": "^0.0.8",
     "smooth-scroll": "^16.1.3"
@@ -40,6 +46,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.0"
+    "tailwindcss": "^2.0.4"
   }
 }
