--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "buffer": "^6.0.3",
     "chokidar": "^3.5.1",
     "emailjs-com": "^2.6.4",
     "framer-motion": "^11.3.29",
