--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^1.7.5",
     "buffer": "^6.0.3",
     "chokidar": "^3.5.1",
     "emailjs-com": "^2.6.4",
@@ -18,6 +19,7 @@
     "primereact": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
