--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aos": "^2.3.4",
     "axios": "^1.7.5",
     "buffer": "^6.0.3",
     "chokidar": "^3.5.1",
