--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "^5.0.1",
     "react-simple-captcha": "^9.3.1",
     "react-simple-image-viewer": "^0.0.8",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "socket.io-client": "^4.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
