--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "react-simple-captcha": "^9.3.1",
